<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/business_photo"
            android:src="@drawable/coffee_image" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/business_name"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="20dp"
                android:text="@string/corporate_address"
                android:textColor="#000"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_location" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="44dp"
                android:text="@string/address"
                android:textColor="#B000"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#BDBDBD" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:text="@string/hours_of_operation"
                android:textColor="#000"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="44dp"
                android:text="@string/hours"
                android:textColor="#B000"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#BDBDBD" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:text="@string/contact_us"
                android:textColor="#000"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="44dp"
                android:text="@string/contacts"
                android:textColor="#B000"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#BDBDBD" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:text="@string/visit_us_online"
                android:textColor="#000"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_web" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="44dp"
                android:text="@string/website"
                android:textColor="#B000"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>